--- a/.docker/supervisord.ini
+++ b/.docker/supervisord.ini
@@ -1,16 +1,13 @@
 [supervisord]
 nodaemon=true
 
-[program:nginx]
-command=nginx
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stderr
-stderr_logfile_maxbytes=0
-
 [program:php-fpm]
 command=php-fpm
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
+
+[program:caddy]
+command=caddy run --config /etc/caddy/Caddyfile
+autorestart=true
